# doceval

./: .gitignore  README.md  pyproject.toml
doceval/: __init__.py  cli.py  compare.py  harness.py  loader.py  mcp_server.py  report.py  types.py
examples/invoices/: extractor.py
examples/invoices/labels/: invoice_Shahid Shariari_30140.json  invoice_Shaun Weien_31134.json  invoice_Sheri Gordon_1260.json  invoice_Shirley Daniels_9012.json  invoice_Shirley Schmidt_14495.json  invoice_Shui Tom_4958.json  invoice_Shui Tom_4960.json  invoice_Shui Tom_9960.json  invoice_Skye Norling_7298.json  invoice_Sonia Cooley_3832.json  invoice_Stefania Perrino_26367.json  invoice_Stefania Perrino_26375.json  invoice_Stefania Perrino_26376.json  invoice_Steve Carroll_22489.json  invoice_Steve Carroll_27639.json  invoice_Steve Chapman_13707.json  invoice_Steve Chapman_23545.json  invoice_Steve Nguyen_27922.json  invoice_Steven Cartwright_1702.json  invoice_Steven Cartwright_42735.json
tests/: conftest.py  test_cli.py  test_compare.py  test_harness.py  test_mcp_server.py  test_report.py
